--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.53",
-    "@types/react-dom": "^18.2.18",
+    "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
@@ -19,8 +19,8 @@
     "vite": "^5.0.12"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.0-canary-2e470a788-20240214",
+    "react-dom": "^18.3.0-canary-2e470a788-20240214",
     "react-router-dom": "^6.22.0"
   }
 }
